--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -147,7 +147,7 @@ risultati, altrimenti asincroni.
 $\bullet$ In fase implementativa, si parla di comunicazione bloccante se il richiedente
 si blocca in attesa del risultato, altrimenti non bloccante
 9
-Oltre alla classicazioni principali, altre caratteristiche con cui si possono classicare i modelli a scambio di
+Oltre alla classicazioni principali, altre caratteristiche con cui si possono classificare i modelli a scambio di
 messaggi:
 $\bullet$ In fase di progettazione si parla di
 -- un sistema simmetrico se mittente e ricevente si conoscono (rarissimo) oppure asimmetrico (caso tipico:C/S).
