--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -1,6 +1,6 @@
 \section{Sistemi per la comunicazione e la sincronizzazione}
 La maniera con cui due processi possono comunicare è molto variabile: si
-possono classicare le comunicazioni in diversi modi (sincrone/asincrone, dirette/indirette, bloccanti/non bloccanti . .
+possono classificare le comunicazioni in diversi modi (sincrone/asincrone, dirette/indirette, bloccanti/non bloccanti . .
 . ). Di particolare interesse riguarda
 ovviamente la comunicazione a molti destinatari : un tale sistema può essere alle
 volte molto costoso da gestire, ma spesso è necessario (gestione a copie attive;
