--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -186,7 +186,7 @@ trasferire e quando, spesso accomunata
 a dove si deve trasferire, ovvero un concetto di locazione. In particolare, si deve
 trovare un sistema per valutare qual è l'impatto sullo scheduling locale, potendo
 integrare quindi politiche di più alta gestione. Le politiche si possono quindi
-classicare come:
+classificare come:
 $\bullet$ Statiche: sono molto facili da valutare, e risulta facile definire come trasferire
 (tipo, si decide che sono i processi nuovi a muoversi, fornendo però un rio
 schio di trashing). La locazione è statica, e anche se non risulta essere
@@ -239,7 +239,7 @@ e mantenere comunque uno stato coeso. Si può pensare a varie ottimizzazioni,
 magari trasportando solo le dierenze rispetto ad uno stato iniziale o una sintesi
 dei risultati ottenuti.
 \subsection{Classicazione della mobilità}
-Per gli agenti mobili, si può classicare in diversi gradi la mobilità:
+Per gli agenti mobili, si può classificare in diversi gradi la mobilità:
 $\bullet$ Forte: In ogni punto del codice è possibile specicare la mobilità. Tali
 sistemi sono in realtà dicilmente realizzabili, perché presentano grossi
 problemi di supporto.
