--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -279,7 +279,7 @@ Un primo esempio, spesso implementato mediante politiche più semplici
 perché non è realmente implementabile ma solo un modello a tendere, è la
 min-max fairness. Si immagini di avere un numero di richieste superiore alle
 risorse disponibili, e si devono quindi dividere le risorse in maniera fair. L'idea
-` quella di classicare i ussi in base alle loro esigenze, privilegiando i ussi che
+` quella di classificare i ussi in base alle loro esigenze, privilegiando i ussi che
 richiedono meno risorse, per poter così lasciare più risorse a chi ne ha maggior\i{}
 mente bisogno; x1 $<$ x2 $<$ . . . $<$ xn indica quindi la priorit` con cui servire,
 mentre C indica la capacità massima a disposizione del router. Si possono quina
@@ -476,7 +476,7 @@ $\bullet$ l'assured forwarding, in cui i pacchetti sono marcati a seconda della 
 Vi è però un problema: come si possono definire queste classi, nel protocollo
 IPv4 non vi è possibilità. L'idea migliore sarebbe quella di passare ad IPv6, che
 grazie a 128 bit contro 32, garantisce la presenza di ancora molti nomi, ove `
-presente un apposito campo dove si può classicare il singolo pacchetto!
+presente un apposito campo dove si può classificare il singolo pacchetto!
 IPv6 è stato pensato per essere compatibile con IPv4, ma gestisce gli ine
 dirizzi in maniera diversa (il broadcast è stato eliminato, divenendo in realtà
 multicast; sono stati aggiunti il P2P e l'anycast14 , ed è in grado di fornire un
