--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -14,7 +14,7 @@ previsti: ciò è dovuto a un sistema progettato male. Il failure è l'effetto v
  \item Un fault infine è proprio il comportamento che si è venuto a vericare che ha portato il sistema a generare un
  failure: corrisponde quindi proprio alla causa a monte.
 \end{itemize}
-I fault si possono classicare a seconda di quanto si ripetono:
+I fault si possono classificare a seconda di quanto si ripetono:
 \begin{itemize}
  \item Sono \textit{permanenti} se si ripresenta in maniera periodica: sono quindi facili da individuare, e facili da
  risolvere. Si parla di Bohrbug per errori che si ripetono facilmente, riproducibili, che si possono quindi osservare
@@ -80,7 +80,7 @@ intrusione: il rischio sarebbe che troppe risorse sono allocate solo per vericar
 riducendone l'efficienza! La replicazione è un costo che si va ad aggiungere al sistema: ma in generale si tratta di un
 costo sso, a fronte di possibili costi molto peggiori in caso di fallimento del sistema!
 \subsection{Possibili guasti}
-I guasti si possono anche classicare in base alla loro riconoscibilità da un sistema (processore esterno):
+I guasti si possono anche classificare in base alla loro riconoscibilità da un sistema (processore esterno):
 \begin{itemize}
  \item \textit{Fail-stop}: un processore si ferma perché non rispetta un invariante, e questo viene identicato dagli
  altri processori
