--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -152,7 +152,7 @@ che hanno un tempo d'esecuzione molto lungo (per esempio, processi ciclici).
 Non si fanno quindi migrare i processi con un tempo di vita limitato.
 Demos/MP è stato anche il primo ideatore di un forwarder, che può lavorare
 correttamente grazie al sistema a link! Il forwarder tuttavia è una struttura
-temporanea, finché il link al processo non viene riqualicato, ovvero anche i
+temporanea, finché il link al processo non viene riqualificato, ovvero anche i
 client riescono ad accederci direttamente senza dover passare dal nodo iniziale
 (si può comunque anche fare un sistema a scarto di messaggi, per cui la reo
 sponsabilit` del trovare il nuovo processore tocchi al cliente). Si deve quindi
