--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -373,7 +373,7 @@ non presenta nessun costo d'attivazione e disattivazione, ma necessita che
 lo stato sia memorizzato sul client (infatti, sfruttando un meccanismo di
 trasparenza, un client potrebbe non riutilizzare la stessa istanza già usaa
 ta!). Vi sono però problemi di dimensionamento di cui tener conto (se son
-troppe istanze rispetto al traco, si consumano inutilmente le risorse, se
+troppe istanze rispetto al traffico, si consumano inutilmente le risorse, se
 invece son poche o si estende il pool, oppure si è necessaria una coda dove
 memorizzare le richieste). Si potrebbe ottimizzare per esempio facendo
 59
