--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -416,7 +416,7 @@ correttamente, si ottiene speed-up ed efficienza massimi.
 In questi indicatori si è tuttavia lasciato da parte il problema dell'I/O, che
 spesos è il vero collo di bottiglia in diverse architetture. Inoltre, vi son diversi
 15
-fattori che possono inuenzare l'efficienza e lo speed-up dell'architettura, come
+fattori che possono influenzare l'efficienza e lo speed-up dell'architettura, come
 il deployment reale. Si possono quindi estendere gli indicatori considerando
 l'eetto generale dell'overhead, T0 (N ), che rappresenta le risorse e il tempo
 realmente utilizzato per la comunicazione (caso ideale di deployment):
