--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -287,7 +287,7 @@ Si vuole quindi chiedere o fornire un servizio senza avere il proxy/skeleton è 
 Nel caso del client, si parla di Dinamyc Invocation Interface. Si realizza un oggetto che funziona come il proxy che si
 avrebbe avuto in maniera statica. Si ha quindi un oggetto Request, che è uno pseudo-object 31 , che permette di
 specicare e una richiesta dinamica. Si tratta quindi di un contenitore fornito dall'ambiente,
-per cui un client eettua una invoke, e l'ORB utilizza il servant giusto per
+per cui un client effettua una invoke, e l'ORB utilizza il servant giusto per
 richiamare l'operazione e fornire il risultato. Si potrebbero realizzare tutte le
 operazioni dinamiche, ma hanno un costo molto elevato! Tuttavia, vi sono
 diversi modi per ottenere il risultato, non solo in maniera sincrona bloccante
